fixed dropdown-content coloring (for light and dark mode)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
   --timeline: #ceb15a;
   --light-gray: #d6d6d6;
   --light-gray-70: #d6d6d6b3;
-  --background-navbar: #2b2b2cbf;
+  --background-navbar: #2b2b2cb2;
   --on-hover: #fa8e00;
   --deko-accent-color: #ffdb70;
   --link: #ffdb70;
@@ -34,7 +34,7 @@
   --timeline: #364fa3a1;
   --light-gray: #212121;
   --light-gray-70: #212121b3;
-  --background-navbar: #ffffff;
+  --background-navbar: #ffffff30;
   --on-hover: #061d34;
   --deko-accent-color: #496bd9;
   --link: #496bd9a1;
